# opengl_template

./: .gitignore  CMakeLists.txt
